# PY-Tool-App

./: .gitignore  LONGMAN_INTEGRATION.md  Makefile  README.md  app.py  config_transcription.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.bak-20250816202926  test_final_rp.py  test_ga_vs_rp.py  test_phonetic.py
app_gui/: translator_gui.py
apps/: file_translator.py  text_translator.py  tic_tac_toe.py  tictactoe.py  tik_tak_toe.py  timer.py  translator.py  translator_gui.py
apps/guis/: tictactoe_gui.py  timer_gui.py  translator_gui.py
apps/help/: read_files.py  write_files.py
src/config/: i18n.py  translations.py
src/core/: file_translator.py  text_translator.py  translator.py
src/core/factories/: translator_factory.py
src/core/help/: read_files.py
src/core/implements/: file_translator_implements.py  phonetic_transcription_implements.py  text_translator_implements.py
src/core/interfaces/: file_translator_interface.py  (+2 more)
src/gui/: translator_gui.py
src/services/: american_ipa_service.py  googletrans_services.py  hybrid_rp_service.py  longman_dictionary_service.py  phonetic_transcription_service.py  rp_ipa_service.py  rp_phonetic_service.py  spacy_text_process.py  strong_weak_forms_dictionary.py  weak_forms_processor.py
tests/: test.py
text_to_translate/: P.E adiccion a las drogas en la adolescencia_translated.txt  PENSAR LAS ADOLESCENCIAS.docx  text_detect.txt  text_detect_translated.txt  text_en.txt  text_en_translated.txt  text_ru.txt  text_ru_translated.txt
translations/: translations.json  translations.py
(+5 files in other folders)
